--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" Content="IE=edge">
     <meta name="viewport" Content="width=device-width, initial-scale=1">
     <title>Proof</title>
-	<link rel="stylesheet" type="text/css" href="/Content/fonts/open-sans.css">
-	<link rel="stylesheet" type="text/css" href="/style.css">
+	<link rel="stylesheet" type="text/css" href="Content/fonts/open-sans.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -59,7 +59,7 @@
 						<div class="td td--time">1:00 pm</div>
 						<div class="td td--customer">Aaron A.</div>
 						<div class="td td--vehicle">2013 Chrysler 400 <br />Authomatic 4CYL 2WD </div>
-						<div class="td td--advisor"><img src="/Content/images/ava.jpg" alt="" />Nils</div>
+						<div class="td td--advisor"><img src="Content/images/ava.jpg" alt="" />Nils</div>
 						<div class="td td--status">
 							Not arrived
 							<div class="c-status c-status--is-not-arrived"></div>
@@ -77,7 +77,7 @@
 						<div class="td td--time">2:00 pm</div>
 						<div class="td td--customer">Aaron A.</div>
 						<div class="td td--vehicle">2013 Chrysler 400 <br />Authomatic 4CYL 2WD </div>
-						<div class="td td--advisor"><img src="/Content/images/ava.jpg" alt="" />Nils</div>
+						<div class="td td--advisor"><img src="Content/images/ava.jpg" alt="" />Nils</div>
 						<div class="td td--status">
 							Completed
 							<!--div class="c-status c-status--is-not-arrived"></div-->
@@ -97,7 +97,7 @@
 						<div class="td td--time">3:00 pm</div>
 						<div class="td td--customer">Aaron A.</div>
 						<div class="td td--vehicle">2013 Chrysler 400 <br />Authomatic 4CYL 2WD </div>
-						<div class="td td--advisor"><img src="/Content/images/ava.jpg" alt="" />Nils</div>
+						<div class="td td--advisor"><img src="Content/images/ava.jpg" alt="" />Nils</div>
 						<div class="td td--status">
 							Not arrived
 							<div class="c-status c-status--is-not-arrived"></div>
@@ -115,7 +115,7 @@
 						<div class="td td--time">4:00 pm</div>
 						<div class="td td--customer">Aaron A.</div>
 						<div class="td td--vehicle">2013 Chrysler 400 <br />Authomatic 4CYL 2WD </div>
-						<div class="td td--advisor"><img src="/Content/images/ava.jpg" alt="" />Nils</div>
+						<div class="td td--advisor"><img src="Content/images/ava.jpg" alt="" />Nils</div>
 						<div class="td td--status">
 							Not arrived
 							<div class="c-status c-status--is-not-arrived"></div>
@@ -133,7 +133,7 @@
 						<div class="td td--time">5:00 pm</div>
 						<div class="td td--customer">Aaron A.</div>
 						<div class="td td--vehicle">2013 Chrysler 400 <br />Authomatic 4CYL 2WD </div>
-						<div class="td td--advisor"><img src="/Content/images/ava.jpg" alt="" />Nils</div>
+						<div class="td td--advisor"><img src="Content/images/ava.jpg" alt="" />Nils</div>
 						<div class="td td--status">
 							Not arrived
 							<div class="c-status c-status--is-not-arrived"></div>
@@ -151,7 +151,7 @@
 						<div class="td td--time">6:00 pm</div>
 						<div class="td td--customer">Aaron A.</div>
 						<div class="td td--vehicle">2013 Chrysler 400 <br />Authomatic 4CYL 2WD </div>
-						<div class="td td--advisor"><img src="/Content/images/ava.jpg" alt="" />Nils</div>
+						<div class="td td--advisor"><img src="Content/images/ava.jpg" alt="" />Nils</div>
 						<div class="td td--status">
 							Not arrived
 							<div class="c-status c-status--is-not-arrived"></div>
@@ -169,7 +169,7 @@
 						<div class="td td--time">7:00 pm</div>
 						<div class="td td--customer">Aaron A.</div>
 						<div class="td td--vehicle">2013 Chrysler 400 <br />Authomatic 4CYL 2WD </div>
-						<div class="td td--advisor"><img src="/Content/images/ava.jpg" alt="" />Nils</div>
+						<div class="td td--advisor"><img src="Content/images/ava.jpg" alt="" />Nils</div>
 						<div class="td td--status">
 							Not arrived
 							<div class="c-status c-status--is-not-arrived"></div>
@@ -187,7 +187,7 @@
 						<div class="td td--time">8:00 pm</div>
 						<div class="td td--customer">Aaron A.</div>
 						<div class="td td--vehicle">2013 Chrysler 400 <br />Authomatic 4CYL 2WD </div>
-						<div class="td td--advisor"><img src="/Content/images/ava.jpg" alt="" />Nils</div>
+						<div class="td td--advisor"><img src="Content/images/ava.jpg" alt="" />Nils</div>
 						<div class="td td--status">
 							Not arrived
 							<div class="c-status c-status--is-not-arrived"></div>
@@ -205,7 +205,7 @@
 						<div class="td td--time">9:00 pm</div>
 						<div class="td td--customer">Aaron A.</div>
 						<div class="td td--vehicle">2013 Chrysler 400 <br />Authomatic 4CYL 2WD </div>
-						<div class="td td--advisor"><img src="/Content/images/ava.jpg" alt="" />Nils</div>
+						<div class="td td--advisor"><img src="Content/images/ava.jpg" alt="" />Nils</div>
 						<div class="td td--status">
 							Not arrived
 							<div class="c-status c-status--is-not-arrived"></div>
@@ -223,7 +223,7 @@
 						<div class="td td--time">10:00 pm</div>
 						<div class="td td--customer">Aaron A.</div>
 						<div class="td td--vehicle">2013 Chrysler 400 <br />Authomatic 4CYL 2WD </div>
-						<div class="td td--advisor"><img src="/Content/images/ava.jpg" alt="" />Nils</div>
+						<div class="td td--advisor"><img src="Content/images/ava.jpg" alt="" />Nils</div>
 						<div class="td td--status">
 							Not arrived
 							<div class="c-status c-status--is-not-arrived"></div>
@@ -241,7 +241,7 @@
 						<div class="td td--time">11:00 pm</div>
 						<div class="td td--customer">Aaron A.</div>
 						<div class="td td--vehicle">2013 Chrysler 400 <br />Authomatic 4CYL 2WD </div>
-						<div class="td td--advisor"><img src="/Content/images/ava.jpg" alt="" />Nils</div>
+						<div class="td td--advisor"><img src="Content/images/ava.jpg" alt="" />Nils</div>
 						<div class="td td--status">
 							Not arrived
 							<div class="c-status c-status--is-not-arrived"></div>
@@ -259,7 +259,7 @@
 						<div class="td td--time">12:00 pm</div>
 						<div class="td td--customer">Aaron A.</div>
 						<div class="td td--vehicle">2013 Chrysler 400 <br />Authomatic 4CYL 2WD </div>
-						<div class="td td--advisor"><img src="/Content/images/ava.jpg" alt="" />Nils</div>
+						<div class="td td--advisor"><img src="Content/images/ava.jpg" alt="" />Nils</div>
 						<div class="td td--status">
 							Not arrived
 							<div class="c-status c-status--is-not-arrived"></div>
@@ -277,7 +277,7 @@
 						<div class="td td--time">13:00 pm</div>
 						<div class="td td--customer">Aaron A.</div>
 						<div class="td td--vehicle">2013 Chrysler 400 <br />Authomatic 4CYL 2WD </div>
-						<div class="td td--advisor"><img src="/Content/images/ava.jpg" alt="" />Nils</div>
+						<div class="td td--advisor"><img src="Content/images/ava.jpg" alt="" />Nils</div>
 						<div class="td td--status">
 							Not arrived
 							<div class="c-status c-status--is-not-arrived"></div>
@@ -295,7 +295,7 @@
 						<div class="td td--time">14:00 pm</div>
 						<div class="td td--customer">Aaron A.</div>
 						<div class="td td--vehicle">2013 Chrysler 400 <br />Authomatic 4CYL 2WD </div>
-						<div class="td td--advisor"><img src="/Content/images/ava.jpg" alt="" />Nils</div>
+						<div class="td td--advisor"><img src="Content/images/ava.jpg" alt="" />Nils</div>
 						<div class="td td--status">
 							Not arrived
 							<div class="c-status c-status--is-not-arrived"></div>
@@ -313,7 +313,7 @@
 		
 		<div class="c-advertising-zone">
 			<div class="c-advertising-zone__img">
-				<img src="/Content/images/advertising.jpg" alt="" />
+				<img src="Content/images/advertising.jpg" alt="" />
 			</div>
 		</div>
 	</div>
