--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	
     
 	<div class="c-table-wrap">
+		<div class="b-buffer"></div>
 		<a href="#" class="b b0"></a>
 		<a href="#" class="b b1"></a>
 		<a href="#" class="b b2"></a>
